@@ -1,5 +1,7 @@
 
 5.02  2014-05-31
+  - Fixed bug where Mojo::DOM::HTML could not handle tags with lots of
+    attributes.
 
 5.01  2014-05-30
   - Fixed continuation line handling in Mojo::Headers.
